--- a/index.html
+++ b/index.html
@@ -1,49 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
-   <link rel="stylesheet" href="style.css">
-  
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Snake Game</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- ================= LANDING POPUP ================= -->
+    <div class="landing-overlay">
+      <div class="landing-card">
+        <h1 class="game-title">🐍 Snake Game</h1>
+        <p class="game-subtitle">Play • Compete • Break Records</p>
 
-  <div class="container">
-   <div class="outerbox">
-     <div class="topbaar">
-         <div class="left">
-            <h3 class="score"></h3>
-         </div>
-         <div class="middle">
-            <h3 class="level"></h2>
-         </div>
-         <div class="right">
-            <h3 class="lives"></h1>
-         </div>
-         <div class="highScore">
-            <h3 class="high"></h3>
-         </div>
-         
-     </div>
-     <div class="board">
-        
-     </div>
-      <div class="btn-container">
-      <button class="btn ">Play</button>
-      <button class="btn reset">Reset</button>
-     </div>
-     <div class="game-over">
-       <h1>GameOver </h1>
-       <p>Press Space Baar to Play again</p>
-     </div>
-     </div>
-  </div>
+        <div class="landing-actions">
+          <button class="action-btn primary guest">▶ Play as Guest</button>
+          <button class="action-btn signin">Sign In</button>
+          <button class="action-btn signup">Create Account</button>
+        </div>
 
+        <p class="hint-text">Sign in to save your high scores</p>
+      </div>
+    </div>
+    <!-- ================= LANDING POPUP END ================= -->
 
+    <!-- ================= SIGN IN POPUP ================= -->
+    <div class="signin-overlay">
+      <div class="auth-card">
+        <h2>Welcome Back</h2>
+        <p>Continue your game 🎮</p>
 
+        <button class="google-btn">
+          <svg
+            width="20"
+            height="20"
+            viewBox="0 0 48 48"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill="#EA4335"
+              d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"
+            />
+            <path
+              fill="#4285F4"
+              d="M46.5 24.5c0-1.6-.14-3.14-.4-4.64H24v9.27h12.7c-.55 2.96-2.18 5.47-4.64 7.17l7.33 5.69c4.29-3.96 6.11-9.8 6.11-16.49z"
+            />
+            <path
+              fill="#FBBC05"
+              d="M10.54 28.59c-.48-1.44-.76-2.98-.76-4.59s.27-3.15.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24s.92 7.54 2.56 10.78l7.98-6.19z"
+            />
+            <path
+              fill="#34A853"
+              d="M24 48c6.47 0 11.9-2.13 15.86-5.81l-7.33-5.69c-2.03 1.36-4.63 2.16-8.53 2.16-6.26 0-11.57-4.22-13.46-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"
+            />
+          </svg>
+          Sign in with Google
+        </button>
 
+        <div class="divider"><span>OR</span></div>
 
-<script src="./script.js"></script>
-</body>
+        <form class="auth-form">
+          <input type="email" placeholder="Email" required />
+          <input type="password" placeholder="Password" required />
+          <button class="primary-btn">Sign In</button>
+        </form>
+
+        <button class="back-btn">← Back</button>
+      </div>
+    </div>
+    <!-- ================= SIGN IN END ================= -->
+
+    <!-- ================= SIGN UP POPUP ================= -->
+    <div class="signup-overlay">
+      <div class="auth-card">
+        <h2>Create Account</h2>
+        <p>Save your progress & scores</p>
+
+        <button class="google-btn">
+          <svg
+            width="20"
+            height="20"
+            viewBox="0 0 48 48"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill="#EA4335"
+              d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"
+            />
+            <path
+              fill="#4285F4"
+              d="M46.5 24.5c0-1.6-.14-3.14-.4-4.64H24v9.27h12.7c-.55 2.96-2.18 5.47-4.64 7.17l7.33 5.69c4.29-3.96 6.11-9.8 6.11-16.49z"
+            />
+            <path
+              fill="#FBBC05"
+              d="M10.54 28.59c-.48-1.44-.76-2.98-.76-4.59s.27-3.15.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24s.92 7.54 2.56 10.78l7.98-6.19z"
+            />
+            <path
+              fill="#34A853"
+              d="M24 48c6.47 0 11.9-2.13 15.86-5.81l-7.33-5.69c-2.03 1.36-4.63 2.16-8.53 2.16-6.26 0-11.57-4.22-13.46-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"
+            />
+          </svg>
+          Sign up with Google
+        </button>
+
+        <div class="divider"><span>OR</span></div>
+
+        <form class="auth-form">
+          <input type="text" placeholder="Username" required />
+          <input type="email" placeholder="Email" required />
+          <input type="password" placeholder="Password" required />
+          <button class="primary-btn">Create Account</button>
+        </form>
+
+        <button class="back-btn">← Back</button>
+      </div>
+    </div>
+    <!-- ================= SIGN UP END ================= -->
+
+    <!-- ================= GAME UI (UNCHANGED) ================= -->
+    <div class="container">
+      <div class="outerbox">
+        <div class="topbaar">
+          <div class="user">
+            <h3 class="username">Guest</h3>
+          </div>
+          <div class="left"><h3 class="score"></h3></div>
+          <div class="middle"><h3 class="level"></h3></div>
+          <div class="right"><h3 class="lives"></h3></div>
+          <div class="highScore"><h3 class="high"></h3></div>
+        </div>
+
+        <div class="board"></div>
+
+        <div class="btn-container">
+          <button class="btn">Play</button>
+          <button class="btn reset">Reset</button>
+        </div>
+
+        <div class="game-over">
+          <h1>Game Over</h1>
+          <p>Press Space Bar to Play again</p>
+        </div>
+      </div>
+    </div>
+    <!-- ================= GAME UI END ================= -->
+
+    <script src="script.js"></script>
+  </body>
 </html>
