--- a/index.html
+++ b/index.html
@@ -137,6 +137,15 @@
           <button class="btn reset">Reset</button>
         </div>
 
+        <div class="controls">
+          <button class="controls_btn up">↑</button>
+          <div class="middle">
+            <button class="controls_btn left">←</button>
+            <button class="controls_btn down">↓</button>
+            <button class="controls_btn right">→</button>
+          </div>
+        </div>
+
         <div class="game-over">
           <h1>Game Over</h1>
           <p>Press Space Bar to Play again</p>
