Added Mobile Controls

--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
         </div>
 
         <div class="controls">
-          <button class="controls_btn up">↑</button>
+          <button class="controls_btn" id="up">↑</button>
           <div class="middle">
-            <button class="controls_btn left">←</button>
-            <button class="controls_btn down">↓</button>
-            <button class="controls_btn right">→</button>
+            <button class="controls_btn" id="left">←</button>
+            <button class="controls_btn" id="down">↓</button>
+            <button class="controls_btn" id="right">→</button>
           </div>
         </div>
 
