Added Mobile Controls

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
 
         <div class="game-over">
           <h1>Game Over</h1>
-          <p>Press Space Bar to Play again</p>
+          <p class="keyboard-btn">Press Space Bar to Play again</p>
+           <button class="btn game-over-btn">Play Again </button>
         </div>
       </div>
     </div>
