--- a/frontend/index.html
+++ b/frontend/index.html
@@ -133,7 +133,9 @@
             </div>
 
             <div class="user">
-              <h3 class="username">Guest</h3>
+             <h3 class="username" data-user-id="" data-tooltip="View stats">
+  Guest
+</h3>
             </div>
           </div>
 
@@ -206,8 +208,57 @@
             <span>Score</span>
           </div>
 
-            <div class="leaderboard-rows"></div>
-          
+          <div class="leaderboard-rows"></div>
+        </div>
+      </div>
+
+      <!-- MVP OVERLAY -->
+      <div class="mvp-overlay" id="mvpOverlay">
+        <div class="mvp-overlay-backdrop">
+          <span class="close-mvpOverlay" id="closemvpOverlay">✖</span>
+        </div>
+
+        <!-- YOUR CARD (UNCHANGED) -->
+        <div class="mvp-wrapper">
+          <div class="mvp-card">
+            <div class="image-container">
+              <div class="player-image" id="player-image">
+                <img src="https://i.pravatar.cc/301" />
+              </div>
+            </div>
+
+            <div class="card-content">
+              <div class="top-bar">
+                <span class="title" id="playerLevel">Diamond</span>
+                <span class="subtitle">Snake Game SEASON 1 </span>
+              </div>
+
+              <div class="stats-row">
+                <div class="stat">
+                  <span class="label">GAME PLAYED</span>
+                  <span class="value" id="gamesPlayed">92</span>
+                </div>
+                <div class="stat">
+                  <span class="label">BEST SCORE</span>
+                  <span class="value" id="bestScore">17</span>
+                </div>
+                <div class="stat">
+                  <span class="label">AVG SURVIVAL</span>
+                  <span class="value" id="avgSurvival">4s</span>
+                </div>
+                <div class="stat">
+                  <span class="label">TOTAL TIME</span>
+                  <span class="value" id="totalTime">531</span>
+                </div>
+              </div>
+
+              <div class="player">
+                <div class="player-name" id="playerName">YOGESH NEGI</div>
+                <div class="totalPoints" id="totalPoints"></div>
+                
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
